--- a/PreprocessLabeled.ipynb
+++ b/PreprocessLabeled.ipynb
@@ -25,9 +25,24 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('EWS.csv')\n",
-    "print(data.iloc[0, 0])"
+    "df = pd.read_csv('EWS.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3e6e014-c577-41d9-bce4-5feec9c6f3d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84690c86-11b4-4fed-9386-593d4e68d15a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
